--- a/exo 1/exo1.html
+++ b/exo 1/exo1.html
@@ -5,16 +5,14 @@
 <title>Essai DHTML</title>
 <meta charset="UTF-8">
 <script>
-	
+
 	function change_liste() {
-		let testListe = document.getElementsByTagName("li");
+		let testListe = document.getElementsByTagName('li');
 		testListe.style.listStyleType = "circle";
 		testListe.innerHTML = "blabla";
-
 		}
 	
 </script>
-	<script src="../app.js" async></script>
 
 </head>
 <body onclick="change_liste()">
